# aibaba-ai

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
cookbook/: Gemma_LangChain.ipynb  LLaMA2_sql_chat.ipynb  Multi_modal_RAG.ipynb  Multi_modal_RAG_google.ipynb  RAPTOR.ipynb  README.md  Semi_Structured_RAG.ipynb  Semi_structured_and_multi_modal_RAG.ipynb  Semi_structured_multi_modal_RAG_LLaMA2.ipynb  advanced_rag_eval.ipynb  agent_fireworks_ai_langchain_mongodb.ipynb  agent_vectorstore.ipynb  airbyte_github.ipynb  anthropic_structured_outputs.ipynb  apache_kafka_message_handling.ipynb  azure_container_apps_dynamic_sessions_data_analyst.ipynb  baby_agi.ipynb  baby_agi_with_agent.ipynb  camel_role_playing.ipynb  causal_program_aided_language_model.ipynb  code-analysis-deeplake.ipynb  contextual_rag.ipynb  cql_agent.ipynb  custom_agent_with_plugin_retrieval.ipynb  custom_agent_with_plugin_retrieval_using_plugnplai.ipynb  custom_agent_with_tool_retrieval.ipynb  custom_multi_action_agent.ipynb  databricks_sql_db.ipynb  deeplake_semantic_search_over_chat.ipynb  docugami_xml_kg_rag.ipynb  extraction_openai_tools.ipynb  fake_llm.ipynb  fireworks_rag.ipynb  forward_looking_retrieval_augmented_generation.ipynb  generative_agents_interactive_simulacra_of_human_behavior.ipynb  human_input_chat_model.ipynb  human_input_llm.ipynb  langgraph_agentic_rag.ipynb  langgraph_crag.ipynb  (+41 more)
docs/: Makefile  (+3 more)
libs/cli/: DOCS.md  Makefile  README.md  pyproject.toml
libs/cli/aiagentsforce_cli/: cli.py  constants.py
libs/cli/aiagentsforce_cli/integration_template/: README.md  pyproject.toml
libs/cli/aiagentsforce_cli/integration_template/docs/: chat.ipynb  document_loaders.ipynb  llms.ipynb  retrievers.ipynb  stores.ipynb  text_embedding.ipynb  tools.ipynb  vectorstores.ipynb
libs/cli/aiagentsforce_cli/integration_template/integration_template/: chat_models.py  document_loaders.py  embeddings.py  retrievers.py  toolkits.py  tools.py  vectorstores.py
libs/cli/aiagentsforce_cli/integration_template/tests/integration_tests/: test_vectorstores.py
libs/cli/aiagentsforce_cli/namespaces/: app.py  integration.py
libs/cli/aiagentsforce_cli/namespaces/migrate/: main.py
libs/cli/aiagentsforce_cli/namespaces/migrate/.grit/patterns/: community_to_core.grit  community_to_core.json  langchain_to_core.grit  langchain_to_core.json  replace_pydantic_v1_shim.grit
libs/cli/aiagentsforce_cli/namespaces/migrate/generate/: partner.py
libs/cli/aiagentsforce_cli/package_template/: README.md
libs/cli/aiagentsforce_cli/package_template/package_template/: chain.py
libs/cli/aiagentsforce_cli/project_template/: README.md
libs/cli/aibaba_ai_cli/: cli.py  dev_scripts.py
libs/cli/aibaba_ai_cli/integration_template/docs/: tools.ipynb
libs/cli/aibaba_ai_cli/integration_template/integration_template/: document_loaders.py  retrievers.py  toolkits.py
libs/cli/aibaba_ai_cli/namespaces/: app.py  template.py
libs/cli/aibaba_ai_cli/namespaces/migrate/.grit/patterns/: community_to_core.grit  community_to_core.json  langchain_to_langchain_community.grit  replace_pydantic_v1_shim.grit
libs/cli/aibaba_ai_cli/namespaces/migrate/generate/: partner.py
libs/cli/aibaba_ai_cli/package_template/package_template/: chain.py
libs/cli/aibaba_ai_cli/utils/: docker.py
libs/cli/scripts/: generate_migrations.py
libs/cli/tests/unit_tests/: test_events.py  test_utils.py
libs/cli/tests/unit_tests/migrate/cli_runner/: test_cli.py
libs/cli/tests/unit_tests/migrate/cli_runner/cases/: imports.py  imports_with_alias_changes.py
libs/cli/tests/unit_tests/migrate/generate/: test_langchain_migration.py  test_partner_migrations.py  test_utils.py
libs/partners/prompty/: README.md  pyproject.toml
libs/partners/prompty/langchain_prompty/: langchain.py  parsers.py  renderers.py
libs/partners/prompty/tests/unit_tests/: fake_callback_handler.py  fake_chat_model.py  fake_output_parser.py  test_prompty_serialization.py
(+6382 files in other folders)
