[tool.poetry]
name = "aiagentsforce-cli"
version = "0.0.35"
description = "CLI for interacting with AI Agents Force"
authors = ["Erick Friis <erick@langchain.dev>"]
readme = "README.md"
repository = "https://github.com/AI-Agents-Force-SDK/aiagentsforce"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/AI-Agents-Force-SDK/aiagentsforce/tree/master/libs/cli"
"Release Notes" = "https://github.com/AI-Agents-Force-SDK/aiagentsforce/releases?q=tag%3A%22langchain-cli%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = { extras = ["all"], version = "^0.9.0" }
gitpython = "^3"
aiagentsforceapi = { extras = ["all"], version = ">=0.0.51" }
uvicorn = ">=0.23,<1.0"
tomlkit = ">=0.12"
gritql = "^0.2.0"

[tool.poetry.scripts]
aiagentsforce = "aiagentsforce_cli.cli:app"
aiagentsforce-cli = "aiagentsforce_cli.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-watch = "^4.2.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"
mypy = "^1.13.0"

[tool.poetry.group.test.dependencies]
aiagentsforce = {path = "../aiagentsforce", develop = true}

[tool.poetry.group.typing.dependencies]
aiagentsforce = {path = "../aiagentsforce", develop = true}

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.extras]
# For aiagentsforceapi
serve = []

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
exclude = [
  "aiagentsforce_cli/integration_template",
  "aiagentsforce_cli/package_template",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
