[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aibaba-ai-prompty"
version = "0.1.1"
description = "An integration package connecting Prompty and Aibaba AI"
authors = []
readme = "README.md"
repository = "https://github.com/aibaba-ai/aibaba-ai"
license = "MIT"

[tool.ruff]
select = [ "E", "F", "I",]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/aibaba-ai/aibaba-ai/tree/master/libs/partners/prompty"
"Release Notes" = "https://github.com/aibaba-ai/aibaba-ai/releases?q=tag%3A%22aiagentsforce-prompty%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aibaba-ai-core = "^0.3.15"
pyyaml = "^6.0.1"

[tool.coverage.run]
omit = [ "tests/*",]

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
markers = [ "requires: mark tests as requiring a specific library", "compile: mark placeholder test used to compile integration tests without running them",]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.test.dependencies.aibaba-ai-core]
path = "../../core"
develop = true

[tool.poetry.group.test.dependencies.aibaba-ai]
path = "../../aibaba-ai"
develop = true

[tool.poetry.group.test.dependencies.aibaba-ai-text-splitters]
path = "../../text-splitters"
develop = true

[tool.poetry.group.dev.dependencies.aibaba-ai-core]
path = "../../core"
develop = true

[tool.poetry.group.typing.dependencies.aibaba-ai-core]
path = "../../core"
develop = true
